[B]v1.18.0 (Tuesday, 24 November 2015):[/B]
  - Fixed HugeFiles resolver
  
[B]v1.17.0 (Tuesday, 24 November 2015):[/B]
  - Fixed small bug with Recently Added lists
  - Fixed ClicknUpload resolver
  - Added new Upload.af resolver
  - Added indicators for hosts that Real-Debrid supports, shown by a yellow *RD next to the host name
  - Temporarily removed the main screen Recently Added, Latest Releases, Watching Now sections, don't worry they will be back very soon

[B]v1.16.0 (Monday, 19 October 2015):[/B]
  - Adjusted resume support, hopefully makes the resume more fluid
  - Added Recently Watched support, enable/disable in the addon settings
  - Added Watch Queue support, similar to Netflix, queue items to watch later, when you finish watching they are removed from the list
  - Fixed 180Upload resolver issue when the captcha is needed
  - Fixed HD and DVD tags not correctly showing

[B]v1.15.0 (Tuesday, 06 October 2015):[/B]
  - Added resume support
  - Fixed HugeFile resolver
  - Fixed issue (hopefully) with occasional error (_getitem_) when loading list of sources

[B]v1.14.0(Friday, 02 October 2015):[/B]
  - Small fix to catch and bypass errors encountered with ad's

[B]v1.13.0(Friday, 25 September 2015):[/B]
  - Fixed ClicknUpload resolver
  - Fixed 180Uploads resolver
  - Small bug fix in tv show episodes listing

[B]v1.12.0(Friday, 11 September 2015):[/B]
  - Small update to help fix Ice Ads

[B]v1.11.0(Tuesday, 8 September 2015):[/B]
  - Fixed syntax error with MySQL table creation
  - Added referrer when grabbing Icefilms ads to ensure impressions are hit

[B]v1.10.0(Wednesday, 2 September 2015):[/B]
  - Fixed final source link scraping
  - Added test for Icefilms advertisements - this displays a quick ad from the Icefilms site to support them, this is testing how the system works, will be changed as we progress
  
[B]v1.9.1(Monday, 24 August 2015):[/B]
  - Again fixed issue with getting final source link, Icefilms site keeps changing
  