@@ -1,3 +1,7 @@
+[B]v1.19.0 (Friday, 19 December 2015):[/B]
+  - Fixed HugeFiles resolver
+  - Fixed Upload.af resolver
+
 [B]v1.18.0 (Tuesday, 24 November 2015):[/B]
   - Fixed HugeFiles resolver
   
